kafka-handson/kafkacat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafkacat
  namespace: operator
spec:
  containers:
    - name: kafkacat
      image: confluentinc/cp-kafkacat:latest
      command:
        - sh
        - -c
        - "exec tail -f /dev/null"
