kafka-handson/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlcenter
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controlcenter-0-internal
            port:
              number: 9021
